 */

Pig Change Log

Release 0.11.0 (unreleased)

INCOMPATIBLE CHANGES

PIG-3034: Remove Penny code from Pig repository (gates via cheolsoo)

PIG-2931: $ signs in the replacement string make parameter substitution fail (cheolsoo via jcoveney)

PIG-1891 Enable StoreFunc to make intelligent decision based on job success or failure (initialcontext via gates)

IMPROVEMENTS

PIG-2907: Publish pig jars for Hadoop2/23 to maven (rohini)

PIG-2934: HBaseStorage filter optimizations (billgraham)

PIG-2980: documentation for DateTime datatype (zjshen via thejas)

PIG-2982: add unit tests for DateTime type that test setting timezone (zjshen via thejas)

PIG-2937: generated field in nested foreach does not inherit the variable name as the field name (jcoveney)

PIG-3019: Need a target in build.xml for source releases (gates)

PIG-2832: org.apache.pig.pigunit.pig.PigServer does not initialize udf.import.list of PigContext (prkommireddi via rohini)

PIG-2898: Parallel execution of e2e tests (iveselovsky via rohini)

PIG-2913: org.apache.pig.test.TestPigServerWithMacros fails sometimes because it picks up previous minicluster configuration file (cheolsoo via julien)

PIG-2976: Reduce HBaseStorage logging (billgraham)

PIG-2947: Documentation for Rank operator (xalan via azaroth)

PIG-2943: DevTests, Refactor Windows checks to use new Util.WINDOWS method for code health (jgordon via dvryaboy)

PIG-2794: Pig test: add utils to simplify testing on Windows (jgordon via gates)

PIG-2908: Fix unit tests to work with jdk7 (rohini via dvryaboy)

PIG-2965: RANDOM should allow seed initialization for ease of testing (jcoveney)

PIG-2964: Add helper method getJobList() to PigStats.JobGraph. Extend visibility of couple methods on same class (prkommireddi via billgraham)

PIG-2579: Support for multiple input schemas in AvroStorage (cheolsoo via sms)

PIG-2946: Documentation of "history" and "clear" commands (xalan via azaroth)
